# dadaskuyumculuk

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  railway.json  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_daily_baselines.py  0003_gumus_kg.py  0004_milyem.py  0005_gram_altin_and_doviz_fix.py  0006_kulcealtin_for_gram_altin.py  0007_pricing_mode.py  0008_remove_aud_cad.py  0009_remove_eski_ata_rename_yeni.py  0010_ata_cumhuriyet_composite.py  0011_kg_gumus_usd_fix.py  0012_kg_altin_usd_from_sarrafiye.py  0013_gumus_kg_usd_from_sarrafiye.py  0014_kg_altin_usd_parusd.py  0015_kg_usd_offsets.py  0016_has_altin_gram_altin_source.py
backend/app/: config.py  main.py  socketio_app.py
backend/app/api/: auth.py  deps.py  margins.py  prices.py  pricing_mode.py  users.py  volatility.py
backend/app/db/: session.py
backend/app/models/: __init__.py  baseline.py  margin.py  pricing_config.py  user.py  volatility.py
backend/app/schemas/: auth.py  margin.py  price.py  pricing_mode.py  user.py  volatility.py
backend/app/services/: altinapi.py  auth.py  bootstrap.py  broadcaster.py  cache.py  failover.py  finansveri.py  notify.py  processor.py  provider.py  symbol_map.py
backend/app/workers/: price_worker.py
backend/tests/: conftest.py  test_altinapi.py  test_failover.py  test_processor.py  test_provider.py
docs/: DEPLOY.md  MAGAZA_HESAP_VE_YAYIN_REHBERI.md  MOBIL_TEST_REHBERI.md  SEMBOL_KAYNAK_HARITASI.md  apidocs.txt
frontend/: Dockerfile  next.config.mjs  (+4 more)
(+50 files in other folders)
